--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "socket.io-client": "^4.8.1"
   }
 }
