--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://memehustle-rust.vercel.app
 MONGO_URI=mongodb://localhost:27017/memehustle
 GEMINI_API_KEY=AIzaSyDv_iW4JbFRtBgYpNpM4Kcu4ZMJP1vKDtY
