--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
 CLIENT_URL=https://memehustle-rust.vercel.app
-MONGO_URI=mongodb://localhost:27017/memehustle
+MONGO_URI=mongodb+srv://pranathi:Panny123@cluster0.szquww8.mongodb.net/memehustle?retryWrites=true&w=majority&appName=Cluster0
 GEMINI_API_KEY=AIzaSyDv_iW4JbFRtBgYpNpM4Kcu4ZMJP1vKDtY
