--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
 CLIENT_URL=https://memehustle-rust.vercel.app
-MONGO_URI=mongodb+srv://pranathi:Panny123@cluster0.szquww8.mongodb.net/memehustle?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://pranathi:Panny123@ac-1rteqmf-shard-00-00.szquww8.mongodb.net:27017,ac-1rteqmf-shard-00-01.szquww8.mongodb.net:27017,ac-1rteqmf-shard-00-02.szquww8.mongodb.net:27017/memehustle?ssl=true&replicaSet=atlas-2td3wp-shard-0&authSource=admin&retryWrites=true&w=majority
 GEMINI_API_KEY=AIzaSyDv_iW4JbFRtBgYpNpM4Kcu4ZMJP1vKDtY
